# hanzilvlib

./: README.md  example.ipynb  pyproject.toml
dev/: clean_csv.py  generate_json.py  hanzi_dict.csv
hanzilvlib/: dictionary.py  level.py
hanzilvlib/data/: hanzi_dict.csv  level.json
tests/: test_dictionary.py
